// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataPickerBody should be rendered correctly 1`] = `
<div
  className="root size-36 background-white spacing-6 container align-items-center"
  style={
    Object {
      "maxHeight": undefined,
    }
  }
>
  <div
    className=""
    onClick={[Function]}
    style={
      Object {
        "alignSelf": undefined,
        "flexBasis": "0",
        "flexGrow": 1,
        "flexShrink": undefined,
        "minWidth": 0,
        "textAlign": "center",
      }
    }
  >
    <div
      className="text font-sans color-night700 line-height-18 font-size-14 v-padding-9 container"
    >
      No Results found
    </div>
  </div>
</div>
`;

exports[`DataPickerBody should be rendered correctly with empty rows 1`] = `
<div
  className="root size-36 background-white spacing-6 container align-items-center"
  style={
    Object {
      "maxHeight": undefined,
    }
  }
>
  <div
    className=""
    onClick={[Function]}
    style={
      Object {
        "alignSelf": undefined,
        "flexBasis": "0",
        "flexGrow": 1,
        "flexShrink": undefined,
        "minWidth": 0,
        "textAlign": "center",
      }
    }
  >
    <div
      className="text font-sans color-night700 line-height-18 font-size-14 v-padding-9 container"
    >
      No Results found
    </div>
  </div>
</div>
`;

exports[`DataPickerBody should be rendered correctly with extra props 1`] = `
Array [
  <div
    className=""
  >
    <div
      className=""
      onClick={[Function]}
      style={
        Object {
          "alignSelf": undefined,
          "flexBasis": "0",
          "flexGrow": 1,
          "flexShrink": undefined,
          "minWidth": 0,
          "textAlign": undefined,
        }
      }
    >
      <div
        className="container uui-input-box -clickable colorSky root size-48 mode-form"
        onBlur={[Function]}
        onFocus={[Function]}
        tabIndex={-1}
      >
        <div
          className="container uui-icon uui-enabled"
          style={Object {}}
        >
          <SvgrURL
            className=""
          />
        </div>
        <input
          aria-invalid={false}
          className="uui-input line-height-24 font-size-16 v-padding-11"
          inputMode="search"
          onChange={[Function]}
          onKeyDown={[Function]}
          placeholder="Search"
          type="search"
          value=""
        />
      </div>
    </div>
  </div>,
  <div
    className="root size-36 background-white spacing-6 container align-items-center"
    style={
      Object {
        "maxHeight": 200,
      }
    }
  >
    <div>
      Not found
    </div>
  </div>,
]
`;
